[project]
name = "ragent"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tomjerrypiano", email = "tomjerrypiano@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "langchain>=0.2.3",
    "unstructured>=0.14.5",
    "openai>=1.33.0",
    "faiss-cpu>=1.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ragent"]
